Trying very hard to make the tests run